# routes/api/columnRoutes.js
@@ -5,7 +5,6 @@ import {
   deleteColumn,
   updateColumn,
   getAllColumns,
-  // getColumnById,
 } from '../../controllers/columns/index.js';
 
 const columnRouter = express.Router();
@@ -14,6 +13,5 @@ columnRouter.post('/', authenticate, addColumn.addColumn);
 
 columnRouter.delete('/:id', authenticate, isValidId, deleteColumn.deleteColumn);
 columnRouter.put('/:id', authenticate, isValidId, updateColumn.updateColumn);
-columnRouter.get('/:id', authenticate, getAllColumns.getAllColumns); // id board
-// columnRouter.get('/:id', authenticate, getColumnById.getColumnById);
+columnRouter.get('/:id', authenticate, getAllColumns.getAllColumns);
 export default columnRouter;
