# swagger.json
@@ -476,36 +476,6 @@
         }
       }
     },
-    "/columns/{id}": {
-      "get": {
-        "tags": ["Columns"],
-        "summary": "get column by id",
-        "parameters": [],
-        "security": [{ "Bearer": [] }],
-        "descripton": "get User column by id",
-        "responses": {
-          "200": {
-            "description": "success",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/getAllColumnsResponse"
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "Not authorized"
-          },
-          "404": {
-            "description": "Not found"
-          },
-          "500": {
-            "description": "Server error"
-          }
-        }
-      }
-    },
     "/columns/{_id}": {
       "delete": {
         "tags": ["Columns"],
